2005-08-08  Dom Lachowicz <cinamod@hotmail.com>

	* rsvg.c (_rsvg_handle_get_pixbuf): Un-premultiply ARGB->RGBA instead of going through a PNG stream first
	* rsvg-cairo-draw.c (rsvg_cairo_get_image_of_node): Ditto
	
2005-08-08  Carl Worth  <cworth@cworth.org>

	* rsvg-cairo-draw.c: (_set_source_rsvg_linear_gradient),
	(_set_source_rsvg_radial_gradient): Invert matrix since cairo's
	pattern matrix is from user space to pattern space.

2005-08-09 Caleb Moore <c.moore@student.unsw.edu.au>

	* rsvg-cairo-draw.c: Made inheritance work with pservers. Tried to get transforms on pservers working.
	
2005-08-07  Dom Lachowicz <cinamod@hotmail.com>

	* rsvg-cairo-draw.c (rsvg_cairo_render_path): Implement line join, cap, width, dash, miter limit
	(rsvg_cairo_render_image): Drawing images now works
	(rsvg_cairo_push_discrete_layer): Largely implemented
	(rsvg_cairo_pop_discrete_layer): Largely implemented
	(_set_source_rsvg_radial_gradient): Make this work for the few tests I have

	* rsvg.c (rsvg_handle_get_pixbuf): Implement this in terms of libart, cairo, or nothing depending on what's enabled at configure time.
	Defaults to libart, simply because the cairo backend is currently immature. This will change in due time...
	* configure.in: Do the hackery necessary to determine what backend to use in rsvg_handle_get_pixbuf()
	* Makefile.am: Ditto; make sure that librsvg-2.la is always installed (though it may not always work...)
	
2005-08-04  Carl Worth  <cworth@cworth.org>

	* .cvsignore: Ignore rsvg-cairo and rsvg-view.
	
	* Makefile.am: Add new rsvg-cairo program.
	
	* rsvg-cairo-draw.c: (rsvg_cairo_render_path): Fix MOVETO and
	LINETO to pull the right coordinates out of the path structure so
	they don't always draw to (0,0).
	
	* rsvg-cairo.h:

	* rsvg-cairo-render.c: (rsvg_cairo_render): New header file,
	(intended to be public) which adds a single function for rendering
	with cairo:

		void rsvg_cairo_render (cairo_t *cr, RsvgHandle *handle);
	