@@ -137,6 +137,7 @@ fi
 
 if test "x$test_art" = "xtrue"; then
 	LIBART_CFLAGS="$LIBART_CFLAGS"
+	build_compat="true"
 else
 	AC_MSG_WARN([libart backend disabled, as requested (Use --with-art to enable)])
 	art_warning="
@@ -164,6 +165,7 @@ fi
 
 if test "x$test_cairo" = "xtrue"; then
 	LIBCAIRO_CFLAGS="$LIBCAIRO_CFLAGS"
+	build_compat="true"
 else
 	AC_MSG_WARN([cairo backend disabled, as requested (Use --with-cairo to enable)])
 fi
@@ -485,6 +487,8 @@ fi
 
 AC_SUBST(LIBRSVG_2_BACKEND_LIBADD)
 AC_SUBST(LIBRSVG_2_BACKEND_CFLAGS)
+
+AM_CONDITIONAL(BUILD_COMPAT, test x$build_compat = xtrue)
 
 dnl ===========================================================================
 
